--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 <div class="col-lg-6">
                     <div class="bg-white mb-4 p-4 align-items-center">
                         <h4 class="text-uppercase font-weight-bold text-center"> Personal Portfolio </h4>
-                        <p class=" text-darkgray"> This <a href="https://github.com/sukikrishna/FARS" target="_blank"> personal portfolio</a> is one of my first projects getting to work with and learn how to use HTML, CSS, and JavaScript to create a nice deliverable.
+                        <p class=" text-darkgray"> This <a href="https://github.com/sukikrishna/sukikrishna.github.io" target="_blank"> personal portfolio</a> is one of my first projects getting to work with and learn how to use HTML, CSS, and JavaScript to create a nice deliverable.
                         </p>
                     </div>
                 </div>
