amazon case study

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <div class="bg-white mb-4 p-4 rounded-pill">
                         <div class="icon-updated mb-4 rb"><i class="fab fa-css3-alt icontwo"></i></div>
                         <h3 class="text-uppercase font-weight-bold"> HTML & CSS</h3>
-                        <p class="text-black"> < 1 year </p>
+                        <p class="text-black"> 1 year </p>
                         <p class="text-darkgray"> Adequate at using HTML and CSS for web-development. </p>
                         <br>
                     </div>
@@ -327,7 +327,7 @@
                             DT model) for speed optimization. </li>
                         <li> Used Python and developed on Poseidon clusters. </li>
                         <li> Achieved 7.5x reduction in compute time with stable fitting (1.4% deviation in MARD), and stable
-                            parameter estimation -- < 4% parameter variation for 10-minute step (against parameters fitted using max
+                            parameter estimation -- 4% parameter variation for 10-minute step (against parameters fitted using max
                                 discretization at 1-minute steps). </li>
                         <li> Estimated 5x cost reduction in cloud resources (AWS) at scale. </li>
                     </ul>
@@ -538,6 +538,16 @@
                 <!-- <h3 class="lined text-uppercase" id="textMAE"> Mech-E / Design Related </h3> -->
                 <h3 class="text-center" id="textMAE"> Mech-E / Design Related </h3>
             </header>
+            
+            <div class="col-lg-15">
+                <div class="bg-white mb-4 p-4 align-items-center">
+                    <h4 class="text-uppercase font-weight-bold text-center"> Amazon Redesign - Data Driven UX and Product Design <a href="amazonRedesign.html" target="_blank"> Case Study </a> </h4>
+                
+                    <img class="center-img-2 frc" src="./images/amazonRedesignImages/Amazon Redesign.png"  style="background-color:#4965a0;">
+                </div>
+            </div>
+
+
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="bg-white mb-4 p-4 align-items-center">
@@ -553,6 +563,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
     <!-- Publications Section-->
